# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.78 2012/02/24 17:19:46 vapier Exp $

*e2fsprogs-libs-1.42.1 (24 Feb 2012)

  24 Feb 2012; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.42.1.ebuild:
  Version bump #405331 by teidakankan.

  22 Feb 2012; Brent Baude <ranger@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  Marking e2fsprogs-libs-1.42 ppc for bug 403405

  21 Feb 2012; Jeff Horelick <jdhore@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  marked x86 per bug 403405

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  Stable for amd64, wrt bug #403405

  18 Feb 2012; Jeroen Roovers <jer@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  Stable for HPPA (bug #403405).

  28 Dec 2011; Mark Loeser <halcy0n@gentoo.org> e2fsprogs-libs-1.41.14.ebuild:
  Stable for ppc64; bug #378039

*e2fsprogs-libs-1.42 (07 Dec 2011)

  07 Dec 2011; Mike Frysinger <vapier@gentoo.org>
  -e2fsprogs-libs-1.42_pre0702.ebuild, +e2fsprogs-libs-1.42.ebuild:
  Bump to final 1.42 release #392637 by Christian Inci. Add half-assed
  USE=static-libs support #377537 by Agostino Sarubbo.

  09 Nov 2011; Mike Frysinger <vapier@gentoo.org> e2fsprogs-libs-1.41.7.ebuild,
  e2fsprogs-libs-1.41.12.ebuild, e2fsprogs-libs-1.41.14.ebuild,
  e2fsprogs-libs-1.42_pre0702.ebuild:
  Drop the glibc dep now that we handle tls in the build generically.

  06 Nov 2011; Brent Baude <ranger@gentoo.org> e2fsprogs-libs-1.41.14.ebuild:
  Marking e2fsprogs-libs-1.41.14 ppc for bug 378039

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> e2fsprogs-libs-1.41.14.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #378039

*e2fsprogs-libs-1.42_pre0702 (01 Sep 2011)

  01 Sep 2011; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.42_pre0702.ebuild:
  Add WIP from upstream #379573 by Sebastian Pipping.
