@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.78 2012/02/24 17:19:46 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.79 2012/02/27 20:53:19 vapier Exp $
+
+  27 Feb 2012; Mike Frysinger <vapier@gentoo.org> e2fsprogs-libs-1.42.ebuild,
+  e2fsprogs-libs-1.42.1.ebuild:
+  Fix thinko in USE=static-libs handling #406079 by Andrew John Hughes.
 
 *e2fsprogs-libs-1.42.1 (24 Feb 2012)
 
